# yolox_wrapper

./: .gitignore  README.md  README_JP.md  config.ini  main.py  pyproject.toml
docs/: development.md  gui.md  index.md  installation.md  quickstart.md
docs/api/: config.md  dataset.md  trainer.md
docs/en/: configuration.md  development.md  gui.md  index.md  installation.md  quickstart.md
docs/en/api/: config.md  dataset.md  trainer.md  wrapper.md
docs/jp/: configuration.md  development.md  index.md  installation.md
docs/jp/api/: config.md  trainer.md  wrapper.md
src/yolox_wrapper/: __init__.py  _trainer.py  config.py  dataset.py  wrapper.py
src/yolox_wrapper/gui/: app.py  camera_tab.py  export_tab.py  infer_tab.py  train_tab.py
tests/: test_config.py  test_dataset.py  test_wrapper.py
