[project]
name = "yolox-wrapper"
version = "0.1.0"
description = "YOLOX training, inference and deployment toolkit"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "beep-lite>=0.1.3",
    "numpy>=1.24,<2.0",
    "opencv-python>=4.8",
    "pillow>=10.0",
    "pyyaml>=6.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "yolox",
]

# ---------------------------------------------------------------------------
# uv
# ---------------------------------------------------------------------------
[tool.uv.sources]
yolox = { git = "https://github.com/Megvii-BaseDetection/YOLOX.git" }

[tool.uv]
# YOLOX が onnx-simplifier==0.4.10 をピン留めしているが新しい Python でビルド不可。
# バージョンピンを緩和して解決する。
override-dependencies = [
    "onnx-simplifier>=0.4.10",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "ty>=0.0.0a1",
]

[project.scripts]
yolox-gui = "yolox_wrapper.gui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yolox_wrapper"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
src = ["src"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
