[project]
name = "yolox-wrapper"
version = "0.1.0"
description = "YOLOX training, inference and deployment toolkit"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "beep-lite>=0.1.3",
    "numpy>=1.24,<2.0",
    "opencv-python>=4.8",
    "pillow>=10.0",
    "pyyaml>=6.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "pixeltable-yolox>=0.4.2",
    "onnx>=1.16",
    "ml-dtypes>=0.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "ty>=0.0.0a1",
    "types-PyYAML>=6.0",
]

[project.scripts]
yolox-gui = "yolox_wrapper.gui.app:main"

# ---------------------------------------------------------------------------
# uv — PyTorch CUDA 12.1 index
# ---------------------------------------------------------------------------
[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yolox_wrapper"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
src = ["src"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
